hw5 small updates

--- a/hw5-12-8-16/index.html
+++ b/hw5-12-8-16/index.html
@@ -15,7 +15,7 @@
   
       <div  class="col-md-9">
         <h2>Road Quality Data Collected by Bicycle - Cambridge, MA</h2>
-        <p id="description">Data visualization of road quality data in Cambridge, MA (currently using dummy data). Click on a street to see data points for that street.</p>
+        <p id="description">Data visualization of road quality data in Cambridge, MA (currently using dummy data). Click on a street to see data points for that street. Hover over data points to see data values.</p>
       </div>
       <div id="tab-data" class="col-md-3" style="display:none">
         <h3>Data</h3>
